--- a/set.env
+++ b/set.env
@@ -1,4 +1,4 @@
-PREFIX=!
+PREFIX=•
 AUTO_READ_STATUS=no
 AUTO_DOWNLOAD_STATUS=no
 PM_PERMIT=no
@@ -7,7 +7,7 @@ BOT_MENU_LINKS=https://i.pinimg.com/736x/0a/70/6f/0a706f90d6a1fb39919aedfbb7fdd8
 PUBLIC_MODE=no
 HEROKU=no
 DATABASE_URL=postgresql://zokou_database_otvw_user:GQV0yStCuBZeRAFYdD5RvWHuEbpns8O4@dpg-cqmdmg3v2p9s73f9dcl0-a.oregon-postgres.render.com/zokou_database_otvw
-OWNER_NAME=TANG SAN
+OWNER_NAME=𝑅𝛩𝛨𝛥𝛮
 NUMERO_OWNER=221778532238
 WARN_COUNT=3
 STARTING_BOT_MESSAGE=yes
